--- a/packages/starlight/components/Banner.astro
+++ b/packages/starlight/components/Banner.astro
@@ -1,10 +1,10 @@
 ---
-interface Props {
-	content: string;
-}
+import type { StarlightRouteData as Props } from '../utils/route-data';
+
+const { banner } = Astro.props.entry.data;
 ---
 
-<div class="sl-banner" role="banner" set:html={Astro.props.content} />
+{banner && <div class="sl-banner" role="banner" set:html={banner.content} />}
 
 <style>
 	.sl-banner {
