--- a/packages/starlight/components/SkipLink.astro
+++ b/packages/starlight/components/SkipLink.astro
@@ -1,9 +1,6 @@
 ---
 import { useTranslations } from '../utils/translations';
-
-interface Props {
-	locale: string | undefined;
-}
+import type { StarlightRouteData as Props } from '../utils/route-data';
 
 const t = useTranslations(Astro.props.locale);
 ---
