--- a/packages/starlight/components/Search.astro
+++ b/packages/starlight/components/Search.astro
@@ -2,10 +2,7 @@
 import '@pagefind/default-ui/css/ui.css';
 import { useTranslations } from '../utils/translations';
 import Icon from '../user-components/Icon.astro';
-
-interface Props {
-	locale: string | undefined;
-}
+import type { StarlightRouteData as Props } from '../utils/route-data';
 
 const t = useTranslations(Astro.props.locale);
 const pagefindTranslations = {
