Pass route data to more components

--- a/packages/starlight/components/ThemeProvider.astro
+++ b/packages/starlight/components/ThemeProvider.astro
@@ -1,4 +1,5 @@
 ---
+import type { StarlightRouteData as Props } from '../utils/route-data';
 import Icon from '../user-components/Icon.astro';
 ---
 
