--- a/packages/starlight/components/ContentPanel.astro
+++ b/packages/starlight/components/ContentPanel.astro
@@ -1,3 +1,7 @@
+---
+import type { StarlightRouteData as Props } from '../utils/route-data';
+---
+
 <div class="content-panel">
 	<div class="sl-container"><slot /></div>
 </div>
