--- a/packages/starlight/layout/TwoColumnContent.astro
+++ b/packages/starlight/layout/TwoColumnContent.astro
@@ -46,7 +46,7 @@ interface Props {
 			width: 100%;
 		}
 
-		:global([data-has-sidebar]) .main-pane {
+		:global([data-has-sidebar][data-has-toc]) .main-pane {
 			--sl-content-margin-inline: auto 0;
 
 			order: 1;
