Less padding on dialog on mobile

--- a/packages/starlight/components/Search.astro
+++ b/packages/starlight/components/Search.astro
@@ -183,7 +183,7 @@ const pagefindTranslations = {
 	.dialog-frame {
 		flex-direction: column;
 		gap: 1rem;
-		padding: 1.5rem;
+		padding: 1rem;
 	}
 
 	button[data-close-modal] {
@@ -221,6 +221,10 @@ const pagefindTranslations = {
 			height: max-content;
 			min-height: 15rem;
 			max-height: calc(100% - 8rem);
+		}
+
+		.dialog-frame {
+			padding: 1.5rem;
 		}
 	}
 </style>
