--- a/docs/src/components/showcase-sites.astro
+++ b/docs/src/components/showcase-sites.astro
@@ -51,5 +51,10 @@ import FluidGrid from './fluid-grid.astro';
 		href="https://starter.obytes.com"
 		thumbnail="starter.obytes.com.jpg"
 	/>
+	<Card
+		title="VRCFR Creator"
+		href="https://dev.vrchatfrance.fr"
+		thumbnail="dev.vrchatfrance.fr.png"
+	/>
 	<Card title="Kanri" href="https://kanriapp.com" thumbnail="kanriapp.com.png" />
 </FluidGrid>
