Adding VRCFR Creator to showcase (#711)
Co-authored-by: HiDeoo <494699+HiDeoo@users.noreply.github.com>

--- a/docs/src/components/showcase-sites.astro
+++ b/docs/src/components/showcase-sites.astro
@@ -52,4 +52,9 @@ import FluidGrid from './fluid-grid.astro';
 		thumbnail="starter.obytes.com.jpg"
 	/>
 	<Card title="Kanri" href="https://kanriapp.com" thumbnail="kanriapp.com.png" />
+	<Card
+		title="VRCFR Creator"
+		href="https://dev.vrchatfrance.fr"
+		thumbnail="dev.vrchatfrance.fr.png"
+	/>
 </FluidGrid>
