Header & Footer sub components

--- a/packages/starlight/components/Footer.astro
+++ b/packages/starlight/components/Footer.astro
@@ -1,9 +1,7 @@
 ---
 import type { StarlightRouteData as Props } from '../utils/route-data';
 
-import LastUpdated from '../components/LastUpdated.astro';
-import PrevNextLinks from '../components/PrevNextLinks.astro';
-import EditLink from './EditLink.astro';
+import { EditLink, LastUpdated, PrevNextLinks } from 'virtual:starlight/components';
 ---
 
 <footer>
