--- a/packages/starlight/components/Header.astro
+++ b/packages/starlight/components/Header.astro
@@ -1,10 +1,13 @@
 ---
-import LanguageSelect from './LanguageSelect.astro';
-import Search from './Search.astro';
-import SiteTitle from './SiteTitle.astro';
-import SocialIcons from './SocialIcons.astro';
-import ThemeSelect from './ThemeSelect.astro';
 import type { StarlightRouteData as Props } from '../utils/route-data';
+
+import {
+	LanguageSelect,
+	Search,
+	SiteTitle,
+	SocialIcons,
+	ThemeSelect,
+} from 'virtual:starlight/components';
 ---
 
 <div class="header sl-flex">
